Fix the background image in sign-up.html on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,31 +86,38 @@ a{
 }
 #form-section{
     font-size: larger;
-    background: rgba(12, 30, 40, 50%);
+    
 }
 #sign-up-body{
     background-color: black;
     color: white;
-    background: url(../images/45degree-astronaut.jpg) no-repeat;
+    background: url(../images/45degree-astronaut.jpg) no-repeat center;
     background-attachment: fixed;
     background-size: 100%;
+    background-size: cover;
+    -webkit-text-stroke: .3px black;
 }
 #sign-up-body h2{
     width: 60%;
-    -webkit-text-stroke: .2px black;
+    -webkit-text-stroke: .5px black;
 }
 
 .top-information{
     width: 180%;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 950px) {
+    #sign-up-body{
+        background: url(../images/45degree-astronaut.jpg) no-repeat;
+        -webkit-text-stroke:0;
+    }
     #form-section{
         width: 300px;
         margin: 40px 0 0 180px;}
     #sign-up-body h2{
         width: 30%;
         margin-left: 180px;
+        -webkit-text-stroke:0; 
     }
     #right-1961{
         margin-top: 50px;
